test_suite/tests/ui/common/validate_without_parenthesis.rs
use nutype::nutype;

#[nutype(validate)]
pub struct Bang(i32);

fn main () {}
